[metadata]
name = mqtt2gpio
version = 0.0.1
author = Paulo Machado
author_email = paulo.mach@gmail.com
description = A A very crude and direct mqtt to gpio write
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paulomach/mqtt2gpio
project_urls =
    Bug Tracker = https://github.com/paulomach/mqtt2gpio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
